update: fix alignment and images

--- a/css/main.css
+++ b/css/main.css
@@ -237,6 +237,11 @@ pre {
   color: white;
 }
 
+.objFix {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
 /* ------------ */
 /* overwrite    */
 /* ------------ */
@@ -298,6 +303,14 @@ pre {
 .shift ul li a:after,
 .shift ul li a:before {
   transition: all 0.5s;
+}
+
+.uk-navbar-nav > li > a,
+.uk-navbar-toggle {
+  padding: 0 !important;
+}
+.uk-navbar-container .navItem {
+  padding: 0 30px;
 }
 /* ------------ */
 /* Landing      */
